--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,13 @@
         "child_process": "^1.0.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "fs": "0.0.1-security",
+        "jsonwebtoken": "^9.0.0",
         "multer": "^1.4.5-lts.1",
+        "passport": "^0.6.0",
+        "passport-google-oauth": "^2.0.0",
+        "passport-google-plus-token": "^2.1.0",
         "sqlite3": "^5.1.4",
         "swagger-ui-express": "^4.6.0",
         "ws": "^8.12.0",
